	- add SHA-224, RIPEMD-{256,320} digests.
	- change hashFunctionType to accommodate crc-32, adler-32, and jlu-32.
	- add SALSA-{10,20} with CBC chaining to create 512 bit digest.
	- build and install rpmdb_hotbackup.
	- vet db-4.5.10 symbols being re-exported through -lrpmdb.
	- add rpmPlatform to rescusitate platform scoring.
	- popt: free option defaults with --help (#119782).

4.4.6 -> 4.4.7:
	- start 4.4.7 development.
	- use zlib's unrolled crc-32 and adler32, add crc-64, checksums.
	- fix: build error msg had reversed args.
	- add md2, md4, and tiger192 digests.
	- teach --scripts about pre- and post-transaction scriptlets.
	- add /usr/bin/rpmdigest.
	- IPv4/6 and EPSV support by Arkadiusz Miskiewicz <arekm@pld-linux.org>.
	- permit autofetch for virgin sources.
	- add AI_IDN flag to getaddrinfo().
	- fix: lazy mkdir for local _sourcedir.
	- add _patchdir macro similar to _sourcedir.
	- permit autofetch for patches.
	- fetch all (even unused) sources/patches at %prep start.
	- bolt in syck, add to librpmio.
	- absorb lsyck.c (and libsyck.la) into internal lua.
	- use RPMTAG_FILELINKTOS to detect dangling symlinks at run time.
	- fix: free dirnames/linktos dependency sets.
	- consolidate per-mode options into single structure.
	- make dbiTags per-rpmdb rather than global.
	- permit rpmgi to iterate over indices.
	- teach rpmtsSolve() about dirnames/linktos dependencies.
	- add rpmdbBlockDBI() to disable index access.
	- automagically extract scriptlet executable dependencies.
	- fix: don't close stdin exec'ing pgp/gpg, harmless warning (#197602).
	- permit waitpid to be used instead of reaping SIGCHLD (#163151).
	- add tracking dependency for parameterized file digests.
	- fix: hide dbiFoo() internals from C++'s inability to promote void *.
	- fix: default _D_EXACT_NAMLEN(d) to strlen((d)->d_name) on non-linux.
	- debugedit: permit -debuginfo extraction for executables with -O0.
	- remove SELinux context verification (#193488).