@@ -95,6 +95,7 @@
 	- vet db-4.5.10 symbols being re-exported through -lrpmdb.
 	- add rpmPlatform to rescusitate platform scoring.
 	- popt: free option defaults with --help (#119782).
+	- refactor miRE pattern matching into librpmio.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
